--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -7,5 +7,5 @@ services:
     ports:
       - "3000:3000"
     volumes:
-      - /app/node_modules
+      - /var/www/porfolio/node_modules
       - .:/var/www/porfolio
