--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -7,5 +7,7 @@ services:
     ports:
       - "3000:3000"
     volumes:
-      - /var/www/porfolio/node_modules
-      - .:/var/www/porfolio
+      - /var/www/portfolio/node_modules
+      - .:/var/www/portfolio
+    environment:
+      - CHOKIDAR_USEPOLLING=true
