--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,4 +7,7 @@ services:
     ports:
       - "8080:80"
     volumes:
-      - /var/www/porfolio/node_modules
+      - /var/www/portfolio/node_modules
+      - .:/var/www/portfolio
+    environment:
+      - CHOKIDAR_USEPOLLING=true
